# git-commits-extractor

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
build_scripts/: build_exe.py  build_installer.py
src/git_commits_extractor/: __init__.py  main.py
tests/: test_extractor.py
